--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -72,7 +72,7 @@
                 app:layout_constraintVertical_bias="0.033" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/msg"
                 android:layout_width="300dp"
 
                 android:layout_height="120dp"
